[package]
name = "business-id-factory"
version = "0.1.0"
description = "Business ID factory for StablecoinRamp flows"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "business_id_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
