[package]
name = "stablecoin-ramp"
version = "0.1.0"
description = "Stablecoin on-ramp and off-ramp program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin_ramp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
business-id-factory = { path = "../business-id-factory", features = ["cpi"] }
whitelist-manager = { path = "../whitelist-manager", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
